# Portfolio

./: .replit  README.md  app.py  pyproject.toml
portfolio/: __init__.py  projects.py  sitemap.py  tutorials.py  utils.py  views.py
portfolio/static/css/: back.css  style.css
portfolio/static/js/: repl-auth.js
portfolio/templates/: about.html  base.html  contact.html  home.html  impulseProjectPage.html  projects.html  spotterProjectPage.html  tutorials.html
portfolio/templates/contact/: contact.html  failure.html  success.html
portfolio/templates/projects/: dizzle.html  impulse.html  qapi.html  spotter.html  spotterProjectPage.html
portfolio/templates/public/: sitemap.xml
portfolio/templates/tutorials/django/: reactDjango.html
portfolio/templates/tutorials/domains/: customDomain.html  customEmail.html  is-a-dev.html
portfolio/templates/tutorials/flask/: googleAuth.html
portfolio/templates/tutorials/python/: passwordHashing.html  randomNumbers.html
portfolio/templates/tutorials/replit/: customDomain.html  is-a-dev.html
