[tool.poetry]
name = "repl_python3_beta_Portfolio"
version = "0.1.0"
description = ""
authors = ["DillonB07 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
